--- a/contact/index.html
+++ b/contact/index.html
@@ -40,7 +40,8 @@
         <nav class="desktop-menu">
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -65,7 +66,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" >
+          <div class="hamburger-menu">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -79,14 +80,23 @@
             <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
           </div>
           <ul class="language-menu">
-            
-<a href="#" onclick="switchLanguage('en')"><li data-lang="en"><img src="/images/eng-icon.png" alt="eng-icon" /></li></a>
-        <a href="#"onclick="switchLanguage('it')"><li data-lang="it"><img src="/images/ita-icon.png" alt="ita-icon" /></li></a>
-        <a href="#" onclick="switchLanguage('ru')"><li data-lang="ru"><img src="/images/rus-icon.png" alt="rus-icon" /></li></a>
+            <a href="#" onclick="switchLanguage('en')"
+              ><li data-lang="en">
+                <img src="/images/eng-icon.png" alt="eng-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('it')"
+              ><li data-lang="it">
+                <img src="/images/ita-icon.png" alt="ita-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('ru')"
+              ><li data-lang="ru">
+                <img src="/images/rus-icon.png" alt="rus-icon" /></li
+            ></a>
           </ul>
           <ul>
             <li><a href="/">Home</a></li>
-          <li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -143,28 +153,39 @@
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
-          <img class="lng-icon-separate"  id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
+          <img
+            class="lng-icon-separate"
+            id="language-icon"
+            src="/images/eng-icon.png"
+            alt="Language Icon"
+          />
           <ul class="language-menu">
-              <li class="en-li" data-lang="en">
-                  <a class=" en-a" href="#" onclick="switchLanguage('en')">
-                      <img src="/images/eng-icon.png" alt="eng-icon" /><span>English</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="it-li" data-lang="ita">
-                  <a class="it-a" href="#" onclick="switchLanguage('it')">
-                      <img src="/images/ita-icon.png" alt="ita-icon" /><span>Italian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="ru-li" data-lang="ru">
-                  <a class="ru-a" href="#" onclick="switchLanguage('ru')">
-                      <img src="/images/rus-icon.png" alt="rus-icon" /><span>Russian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
+            <li class="en-li" data-lang="en">
+              <a class="en-a" href="#" onclick="switchLanguage('en')">
+                <img src="/images/eng-icon.png" alt="eng-icon" /><span
+                  >English</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="it-li" data-lang="ita">
+              <a class="it-a" href="#" onclick="switchLanguage('it')">
+                <img src="/images/ita-icon.png" alt="ita-icon" /><span
+                  >Italian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="ru-li" data-lang="ru">
+              <a class="ru-a" href="#" onclick="switchLanguage('ru')">
+                <img src="/images/rus-icon.png" alt="rus-icon" /><span
+                  >Russian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
           </ul>
-      </div>
+        </div>
       </div>
     </header>
     <div class="hero-section__contact"></div>
@@ -188,7 +209,11 @@
               src="/images/phone-icon.png"
               alt="phone icon"
             />
-            <p><a href="tel:+382 68 557 150">+382 68 557 150 ;</a> <a href="tel:+382 69 841 905">+382 69 841 905</a>   <a href="tel:+382 67 562 004">; +382 67 562 004</a></p>
+            <p>
+              <a href="tel:+382 68 557 150">+382 68 557 150 ;</a>
+              <a href="tel:+382 69 841 905">+382 69 841 905</a>
+              <a href="tel:+382 67 562 004">; +382 67 562 004</a>
+            </p>
           </div>
           <div class="flex-align flex-align__row">
             <img
@@ -196,7 +221,9 @@
               src="/images/sms.png"
               alt="mail icon"
             />
-            <a href="mailto:seamagickotor@gmail.com"><p>seamagickotor@gmail.com</p></a>
+            <a href="mailto:seamagickotor@gmail.com"
+              ><p>seamagickotor@gmail.com</p></a
+            >
           </div>
           <div class="flex-align flex-align__row">
             <img
@@ -207,13 +234,25 @@
             <p>www.seamagickotor.com</p>
           </div>
           <div class="contact-working-hours">
-          <h3 >Working hours</h3>
-          <p>Monday - Sunday 06:00 - 24:00h</p>
-        </div>
+            <h3>Working hours</h3>
+            <p>Monday - Sunday 06:00 - 24:00h</p>
+          </div>
           <div class="flex-align contact-icons__big flex-align__row">
-            <img id="facebook-icon-contact" src="/images/facebook-icon.svg" alt="facebook" />
-            <img  id="instagram-icon-contact" src="/images/instagram-icon-blue.svg" alt="instagram" />
-            <img id="tripadvisor-icon-contact" src="/images/tripadvisor-icon-blue.svg" alt="tripadvisor" />
+            <img
+              id="facebook-icon-contact"
+              src="/images/facebook-icon.svg"
+              alt="facebook"
+            />
+            <img
+              id="instagram-icon-contact"
+              src="/images/instagram-icon-blue.svg"
+              alt="instagram"
+            />
+            <img
+              id="tripadvisor-icon-contact"
+              src="/images/tripadvisor-icon-blue.svg"
+              alt="tripadvisor"
+            />
           </div>
         </div>
         <div class="contact-image__left">
@@ -285,9 +324,7 @@
         <div class="contact-form__image"></div>
       </div>
     </div>
-    <div class="google-map" >
-
-    </div>
+    <div class="google-map"></div>
     <footer>
       <div class="footer-contact">
         <div>
