--- a/it/privacy-policy/index.html
+++ b/it/privacy-policy/index.html
@@ -40,7 +40,8 @@
         <nav class="desktop-menu">
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -65,7 +66,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" >
+          <div class="hamburger-menu">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -79,14 +80,23 @@
             <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
           </div>
           <ul class="language-menu">
-            
-<a href="#" onclick="switchLanguage('en')"><li data-lang="en"><img src="/images/eng-icon.png" alt="eng-icon" /></li></a>
-        <a href="#"onclick="switchLanguage('it')"><li data-lang="it"><img src="/images/ita-icon.png" alt="ita-icon" /></li></a>
-        <a href="#" onclick="switchLanguage('ru')"><li data-lang="ru"><img src="/images/rus-icon.png" alt="rus-icon" /></li></a>
+            <a href="#" onclick="switchLanguage('en')"
+              ><li data-lang="en">
+                <img src="/images/eng-icon.png" alt="eng-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('it')"
+              ><li data-lang="it">
+                <img src="/images/ita-icon.png" alt="ita-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('ru')"
+              ><li data-lang="ru">
+                <img src="/images/rus-icon.png" alt="rus-icon" /></li
+            ></a>
           </ul>
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -143,28 +153,39 @@
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
-          <img class="lng-icon-separate"  id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
+          <img
+            class="lng-icon-separate"
+            id="language-icon"
+            src="/images/eng-icon.png"
+            alt="Language Icon"
+          />
           <ul class="language-menu">
-              <li class="en-li" data-lang="en">
-                  <a class=" en-a" href="#" onclick="switchLanguage('en')">
-                      <img src="/images/eng-icon.png" alt="eng-icon" /><span>English</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="it-li" data-lang="ita">
-                  <a class="it-a" href="#" onclick="switchLanguage('it')">
-                      <img src="/images/ita-icon.png" alt="ita-icon" /><span>Italian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="ru-li" data-lang="ru">
-                  <a class="ru-a" href="#" onclick="switchLanguage('ru')">
-                      <img src="/images/rus-icon.png" alt="rus-icon" /><span>Russian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
+            <li class="en-li" data-lang="en">
+              <a class="en-a" href="#" onclick="switchLanguage('en')">
+                <img src="/images/eng-icon.png" alt="eng-icon" /><span
+                  >English</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="it-li" data-lang="ita">
+              <a class="it-a" href="#" onclick="switchLanguage('it')">
+                <img src="/images/ita-icon.png" alt="ita-icon" /><span
+                  >Italian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="ru-li" data-lang="ru">
+              <a class="ru-a" href="#" onclick="switchLanguage('ru')">
+                <img src="/images/rus-icon.png" alt="rus-icon" /><span
+                  >Russian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
           </ul>
-      </div>
+        </div>
       </div>
     </header>
 
@@ -308,11 +329,11 @@
           participate in, and/or monitor and guide their online activity.
         </p>
         <p class="light-paragraph">
-            Website Name does not knowingly collect any Personal Identifiable
-            Information from children under the age of 13. If you think that your
-            child provided this kind of information on our website, we strongly
-            encourage you to contact us immediately and we will do our best
-            efforts to promptly remove such information from our records.
+          Website Name does not knowingly collect any Personal Identifiable
+          Information from children under the age of 13. If you think that your
+          child provided this kind of information on our website, we strongly
+          encourage you to contact us immediately and we will do our best
+          efforts to promptly remove such information from our records.
         </p>
       </div>
     </div>
