--- a/it/simple-page/index.html
+++ b/it/simple-page/index.html
@@ -6,7 +6,7 @@
     <title>Sea Magic - Privacy policy</title>
     <link rel="icon" href="/images/sea-magic-logo.png" />
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="/lightbox/styles.css">
+    <link rel="stylesheet" href="/lightbox/styles.css" />
 
     <link rel="stylesheet" href="/simple-page/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -42,7 +42,8 @@
         <nav class="desktop-menu">
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -67,7 +68,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" >
+          <div class="hamburger-menu">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -81,14 +82,23 @@
             <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
           </div>
           <ul class="language-menu">
-            
-<a href="#" onclick="switchLanguage('en')"><li data-lang="en"><img src="/images/eng-icon.png" alt="eng-icon" /></li></a>
-        <a href="#"onclick="switchLanguage('it')"><li data-lang="it"><img src="/images/ita-icon.png" alt="ita-icon" /></li></a>
-        <a href="#" onclick="switchLanguage('ru')"><li data-lang="ru"><img src="/images/rus-icon.png" alt="rus-icon" /></li></a>
+            <a href="#" onclick="switchLanguage('en')"
+              ><li data-lang="en">
+                <img src="/images/eng-icon.png" alt="eng-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('it')"
+              ><li data-lang="it">
+                <img src="/images/ita-icon.png" alt="ita-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('ru')"
+              ><li data-lang="ru">
+                <img src="/images/rus-icon.png" alt="rus-icon" /></li
+            ></a>
           </ul>
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -143,30 +153,41 @@
           <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
           <a href="tel:+38268557150">+382 68 557 150</a>
         </div>
-         <!--Language dropdown-->
-         <div class="language-dropdown">
-          <img class="lng-icon-separate" id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
+        <!--Language dropdown-->
+        <div class="language-dropdown">
+          <img
+            class="lng-icon-separate"
+            id="language-icon"
+            src="/images/eng-icon.png"
+            alt="Language Icon"
+          />
           <ul class="language-menu">
-              <li class="en-li" data-lang="en">
-                  <a class=" en-a" href="#" onclick="switchLanguage('en')">
-                      <img src="/images/eng-icon.png" alt="eng-icon" /><span>English</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="it-li" data-lang="ita">
-                  <a class="it-a" href="#" onclick="switchLanguage('it')">
-                      <img src="/images/ita-icon.png" alt="ita-icon" /><span>Italian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="ru-li" data-lang="ru">
-                  <a class="ru-a" href="#" onclick="switchLanguage('ru')">
-                      <img src="/images/rus-icon.png" alt="rus-icon" /><span>Russian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
+            <li class="en-li" data-lang="en">
+              <a class="en-a" href="#" onclick="switchLanguage('en')">
+                <img src="/images/eng-icon.png" alt="eng-icon" /><span
+                  >English</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="it-li" data-lang="ita">
+              <a class="it-a" href="#" onclick="switchLanguage('it')">
+                <img src="/images/ita-icon.png" alt="ita-icon" /><span
+                  >Italian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="ru-li" data-lang="ru">
+              <a class="ru-a" href="#" onclick="switchLanguage('ru')">
+                <img src="/images/rus-icon.png" alt="rus-icon" /><span
+                  >Russian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
           </ul>
-      </div>
+        </div>
       </div>
     </header>
     <div class="hero-section"></div>
@@ -208,7 +229,11 @@
         of Lorem Ipsum.
       </p>
       <div class="flex-align flex-direction__row">
-        <img class="check-icon" src="/images/circle-check-solid.png" alt="check" />
+        <img
+          class="check-icon"
+          src="/images/circle-check-solid.png"
+          alt="check"
+        />
         <p class="light-paragraph">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
@@ -217,7 +242,11 @@
         </p>
       </div>
       <div class="flex-align flex-direction__row">
-        <img class="check-icon" src="/images/circle-check-solid.png" alt="check" />
+        <img
+          class="check-icon"
+          src="/images/circle-check-solid.png"
+          alt="check"
+        />
         <p class="light-paragraph">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
@@ -226,7 +255,11 @@
         </p>
       </div>
       <div class="flex-align flex-direction__row">
-        <img class="check-icon" src="/images/circle-check-solid.png" alt="check" />
+        <img
+          class="check-icon"
+          src="/images/circle-check-solid.png"
+          alt="check"
+        />
         <p class="light-paragraph">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
@@ -235,7 +268,11 @@
         </p>
       </div>
       <div class="flex-align flex-direction__row">
-        <img class="check-icon" src="/images/circle-check-solid.png" alt="check" />
+        <img
+          class="check-icon"
+          src="/images/circle-check-solid.png"
+          alt="check"
+        />
         <p class="light-paragraph">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
@@ -244,109 +281,120 @@
         </p>
       </div>
       <div class="flex-align">
-        <div id="simple-page-bg1" class="simple-page-bgimg hover-shadow cursor" onclick="openModal();currentSlideG(1)"></div>
-        <div id="simple-page-bg2" class="simple-page-bgimg hover-shadow cursor" onclick="openModal();currentSlideG(2)"></div>
-        <div id="simple-page-bg3" class="simple-page-bgimg hover-shadow cursor" onclick="openModal();currentSlideG(3)"></div>
+        <div
+          id="simple-page-bg1"
+          class="simple-page-bgimg hover-shadow cursor"
+          onclick="openModal();currentSlideG(1)"
+        ></div>
+        <div
+          id="simple-page-bg2"
+          class="simple-page-bgimg hover-shadow cursor"
+          onclick="openModal();currentSlideG(2)"
+        ></div>
+        <div
+          id="simple-page-bg3"
+          class="simple-page-bgimg hover-shadow cursor"
+          onclick="openModal();currentSlideG(3)"
+        ></div>
       </div>
-   
-    <!-- The Modal/Lightbox -->
-    <div id="myModal" class="modal">
+
+      <!-- The Modal/Lightbox -->
+      <div id="myModal" class="modal">
         <span class="close cursor" onclick="closeModal()">&times;</span>
         <div class="modal-content">
-            <div class="mySlides">
-                <div class="numbertext">1 / 3</div>
-                <img src="/images/sunbathing-bg.png" style="width:100%">
-            </div>
-            <div class="mySlides">
-                <div class="numbertext">2 / 3</div>
-                <img src="/images/boat-image.png" style="width:100%">
-            </div>
-            <div class="mySlides">
-                <div class="numbertext">3 / 3</div>
-                <img src="/images/most-popular-tour.png" style="width:100%">
-            </div>
-            <!-- Next/previous controls -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <div class="mySlides">
+            <div class="numbertext">1 / 3</div>
+            <img src="/images/sunbathing-bg.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">2 / 3</div>
+            <img src="/images/boat-image.png" style="width: 100%" />
+          </div>
+          <div class="mySlides">
+            <div class="numbertext">3 / 3</div>
+            <img src="/images/most-popular-tour.png" style="width: 100%" />
+          </div>
+          <!-- Next/previous controls -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-    </div>
+      </div>
     </div>
 
-     <!--Footer section-->
-     <footer>
-        <div class="footer-logo-container flex-align">
-          <div class="footer-logo">
-            <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
-          </div>
-          <div class="footer-working-hours">
-            <h3>Working hours</h3>
-            <h4>Monday - Sunday 06:00 - 24:00h</h4>
-          </div>
+    <!--Footer section-->
+    <footer>
+      <div class="footer-logo-container flex-align">
+        <div class="footer-logo">
+          <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
         </div>
-        <div class="footer-info-container flex-align">
-          <div class="footer-info-container__content footer-social">
-            <h3>Find us on social</h3>
-            <p>
-              There are many variations of passages of Lorem Ipsum available, but
-              the majority have suffered alteration in some form text.
-            </p>
-            <div class="flex-align flex-footer">
-              <div class="social-icons">
-                <img
-                  src="/images/facebook-icon.png"
-                  alt="facebook-icon"
-                  width="14"
-                  height="26"
-                />
-              </div>
-              <div class="social-icons">
-                <img
-                  src="/images/instagram-icon.png"
-                  alt="instagram-icon"
-                  width="26"
-                  height="26"
-                />
-              </div>
-              <div class="social-icons">
-                <img
-                  src="/images/tripadvisor-icon.png"
-                  alt="trip-advisor-icon"
-                  width="31"
-                  height="20"
-                />
-              </div>
+        <div class="footer-working-hours">
+          <h3>Working hours</h3>
+          <h4>Monday - Sunday 06:00 - 24:00h</h4>
+        </div>
+      </div>
+      <div class="footer-info-container flex-align">
+        <div class="footer-info-container__content footer-social">
+          <h3>Find us on social</h3>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form text.
+          </p>
+          <div class="flex-align flex-footer">
+            <div class="social-icons">
+              <img
+                src="/images/facebook-icon.png"
+                alt="facebook-icon"
+                width="14"
+                height="26"
+              />
+            </div>
+            <div class="social-icons">
+              <img
+                src="/images/instagram-icon.png"
+                alt="instagram-icon"
+                width="26"
+                height="26"
+              />
+            </div>
+            <div class="social-icons">
+              <img
+                src="/images/tripadvisor-icon.png"
+                alt="trip-advisor-icon"
+                width="31"
+                height="20"
+              />
             </div>
           </div>
-          <div class="footer-info-container__content footer-contact">
-            <h3>Contact</h3>
-            <h5>E-MAIL</h5>
-            <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
-            <h5>RESERVATIONS AND ORDERS</h5>
-            <span class="footer-content__opacity">+382 68 557 150</span>
-            <span class="footer-content__opacity">+382 69 841 905</span>
-            <span class="footer-content__opacity">+382 67 562 004</span>
-          </div>
-          <div class="footer-info-container__content footer-quicklinks">
-            <h3>Quick Links</h3>
-            <a href="#">Lady of the Rock</a>
-            <a href="/attraction/perast/">Perast</a>
-            <a href="#">Submarine Tunnel</a>
-            <a href="#">Mamula Island</a>
-            <a href="#">Blue Cave</a>
-          </div>
         </div>
-        <div class="footer-copyright-container">
-          <div>
-            <p>Copyright © 2024 Web Center. All Rights Reserved.</p>
-          </div>
-          <div class="footer-copyright-container__privacy">
-            <a href="/privacy-policy">PRIVACY POLICY</a>
-            <a href="#">COOKIES</a>
-          </div>
+        <div class="footer-info-container__content footer-contact">
+          <h3>Contact</h3>
+          <h5>E-MAIL</h5>
+          <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
+          <h5>RESERVATIONS AND ORDERS</h5>
+          <span class="footer-content__opacity">+382 68 557 150</span>
+          <span class="footer-content__opacity">+382 69 841 905</span>
+          <span class="footer-content__opacity">+382 67 562 004</span>
         </div>
-      </footer>
+        <div class="footer-info-container__content footer-quicklinks">
+          <h3>Quick Links</h3>
+          <a href="#">Lady of the Rock</a>
+          <a href="/attraction/perast/">Perast</a>
+          <a href="#">Submarine Tunnel</a>
+          <a href="#">Mamula Island</a>
+          <a href="#">Blue Cave</a>
+        </div>
+      </div>
+      <div class="footer-copyright-container">
+        <div>
+          <p>Copyright © 2024 Web Center. All Rights Reserved.</p>
+        </div>
+        <div class="footer-copyright-container__privacy">
+          <a href="/privacy-policy">PRIVACY POLICY</a>
+          <a href="#">COOKIES</a>
+        </div>
+      </div>
+    </footer>
     <script src="/script.js"></script>
     <script src="/lightbox/script.js"></script>
-
   </body>
 </html>
