--- a/it/about-us/index.html
+++ b/it/about-us/index.html
@@ -40,7 +40,8 @@
         <nav class="desktop-menu">
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -65,7 +66,7 @@
         </nav>
         <!--Mobile menu toggle-->
         <div class="close-icon__z-show">
-          <div class="hamburger-menu" >
+          <div class="hamburger-menu">
             <div class="line"></div>
             <div class="line"></div>
             <div class="line"></div>
@@ -79,14 +80,23 @@
             <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
           </div>
           <ul class="language-menu">
-            
-<a href="#" onclick="switchLanguage('en')"><li data-lang="en"><img src="/images/eng-icon.png" alt="eng-icon" /></li></a>
-        <a href="#"onclick="switchLanguage('it')"><li data-lang="it"><img src="/images/ita-icon.png" alt="ita-icon" /></li></a>
-        <a href="#" onclick="switchLanguage('ru')"><li data-lang="ru"><img src="/images/rus-icon.png" alt="rus-icon" /></li></a>
+            <a href="#" onclick="switchLanguage('en')"
+              ><li data-lang="en">
+                <img src="/images/eng-icon.png" alt="eng-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('it')"
+              ><li data-lang="it">
+                <img src="/images/ita-icon.png" alt="ita-icon" /></li
+            ></a>
+            <a href="#" onclick="switchLanguage('ru')"
+              ><li data-lang="ru">
+                <img src="/images/rus-icon.png" alt="rus-icon" /></li
+            ></a>
           </ul>
           <ul>
             <li><a href="/">Home</a></li>
-<li><a href="/tours/">Tours</a></li>            <li class="dropdown">
+            <li><a href="/tours/">Tours</a></li>
+            <li class="dropdown">
               <a href="#">Attractions</a>
               <ul class="sub-menu">
                 <li><a href="#">Gospa od Škrpjela</a></li>
@@ -143,28 +153,39 @@
         </div>
         <!--Language dropdown-->
         <div class="language-dropdown">
-          <img class="lng-icon-separate"  id="language-icon" src="/images/eng-icon.png" alt="Language Icon" />
+          <img
+            class="lng-icon-separate"
+            id="language-icon"
+            src="/images/eng-icon.png"
+            alt="Language Icon"
+          />
           <ul class="language-menu">
-              <li class="en-li" data-lang="en">
-                  <a class=" en-a" href="#" onclick="switchLanguage('en')">
-                      <img src="/images/eng-icon.png" alt="eng-icon" /><span>English</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="it-li" data-lang="ita">
-                  <a class="it-a" href="#" onclick="switchLanguage('it')">
-                      <img src="/images/ita-icon.png" alt="ita-icon" /><span>Italian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
-              <li class="ru-li" data-lang="ru">
-                  <a class="ru-a" href="#" onclick="switchLanguage('ru')">
-                      <img src="/images/rus-icon.png" alt="rus-icon" /><span>Russian</span>
-                      <span class="check-mark"></span>
-                  </a>
-              </li>
+            <li class="en-li" data-lang="en">
+              <a class="en-a" href="#" onclick="switchLanguage('en')">
+                <img src="/images/eng-icon.png" alt="eng-icon" /><span
+                  >English</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="it-li" data-lang="ita">
+              <a class="it-a" href="#" onclick="switchLanguage('it')">
+                <img src="/images/ita-icon.png" alt="ita-icon" /><span
+                  >Italian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
+            <li class="ru-li" data-lang="ru">
+              <a class="ru-a" href="#" onclick="switchLanguage('ru')">
+                <img src="/images/rus-icon.png" alt="rus-icon" /><span
+                  >Russian</span
+                >
+                <span class="check-mark"></span>
+              </a>
+            </li>
           </ul>
-      </div>
+        </div>
       </div>
     </header>
 
@@ -188,8 +209,7 @@
           <img src="/images/boat-image.png" alt="boat image" />
         </div>
       </div>
-      <div 
-      id="our-mission" class="flex-align our-mission">
+      <div id="our-mission" class="flex-align our-mission">
         <div class="our-mission__image">
           <img src="/images/sunbathing-bg.png" alt="image" />
         </div>
@@ -197,99 +217,104 @@
           <h3 class="large-title-heading">Our Mission</h3>
           <p class="light-paragraph">
             Our fleet includes one speedboat, the Marinello Eden 22, which can
-            accommodate a maximum of 10 passengers. 
+            accommodate a maximum of 10 passengers.
           </p>
-          <p class="light-paragraph">Comfort and pleasure are
-            guaranteed, while our knowledge of the region we are traveling
-            through will allow all travelers to get to know the region better
-            and indulge in the beauty of our open seas!</p>
-          <p class="light-paragraph">In our tours, the pick-up
-            location is flexible and can be arranged according to your wishes.
-           </p>
-            <p class="light-paragraph" >
-              We offer both private and group tours, providing personalized
-              experiences tailored to your needs and desires.
-            </p>
+          <p class="light-paragraph">
+            Comfort and pleasure are guaranteed, while our knowledge of the
+            region we are traveling through will allow all travelers to get to
+            know the region better and indulge in the beauty of our open seas!
+          </p>
+          <p class="light-paragraph">
+            In our tours, the pick-up location is flexible and can be arranged
+            according to your wishes.
+          </p>
+          <p class="light-paragraph">
+            We offer both private and group tours, providing personalized
+            experiences tailored to your needs and desires.
+          </p>
         </div>
       </div>
       <div class="about-us__quote">
-         <h2>To reach a port we must sail, sometimes with the wind, <br/>and sometimes against it. <strong>But we must not drift or lie at anchor.</strong>
+        <h2>
+          To reach a port we must sail, sometimes with the wind, <br />and
+          sometimes against it.
+          <strong>But we must not drift or lie at anchor.</strong>
         </h2>
       </div>
     </div>
-      <!--Footer section-->
-      <footer>
-        <div class="footer-logo-container flex-align">
-          <div class="footer-logo">
-            <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
-          </div>
-          <div class="footer-working-hours">
-            <h3>Working hours</h3>
-            <h4>Monday - Sunday 06:00 - 24:00h</h4>
-          </div>
+    <!--Footer section-->
+    <footer>
+      <div class="footer-logo-container flex-align">
+        <div class="footer-logo">
+          <img src="/images/sea-magic-logo.png" alt="sea-magic-logo" />
         </div>
-        <div class="footer-info-container flex-align">
-          <div class="footer-info-container__content footer-social">
-            <h3>Find us on social</h3>
-            <p>
-              There are many variations of passages of Lorem Ipsum available, but
-              the majority have suffered alteration in some form text.
-            </p>
-            <div class="flex-align flex-footer">
-              <div class="social-icons">
-                <img
-                  src="/images/facebook-icon.png"
-                  alt="facebook-icon"
-                  width="14"
-                  height="26"
-                />
-              </div>
-              <div class="social-icons">
-                <img
-                  src="/images/instagram-icon.png"
-                  alt="instagram-icon"
-                  width="26"
-                  height="26"
-                />
-              </div>
-              <div class="social-icons">
-                <img
-                  src="/images/tripadvisor-icon.png"
-                  alt="trip-advisor-icon"
-                  width="31"
-                  height="20"
-                />
-              </div>
+        <div class="footer-working-hours">
+          <h3>Working hours</h3>
+          <h4>Monday - Sunday 06:00 - 24:00h</h4>
+        </div>
+      </div>
+      <div class="footer-info-container flex-align">
+        <div class="footer-info-container__content footer-social">
+          <h3>Find us on social</h3>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form text.
+          </p>
+          <div class="flex-align flex-footer">
+            <div class="social-icons">
+              <img
+                src="/images/facebook-icon.png"
+                alt="facebook-icon"
+                width="14"
+                height="26"
+              />
+            </div>
+            <div class="social-icons">
+              <img
+                src="/images/instagram-icon.png"
+                alt="instagram-icon"
+                width="26"
+                height="26"
+              />
+            </div>
+            <div class="social-icons">
+              <img
+                src="/images/tripadvisor-icon.png"
+                alt="trip-advisor-icon"
+                width="31"
+                height="20"
+              />
             </div>
           </div>
-          <div class="footer-info-container__content footer-contact">
-            <h3>Contact</h3>
-            <h5>E-MAIL</h5>
-            <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
-            <h5>RESERVATIONS AND ORDERS</h5>
-            <span class="footer-content__opacity">+382 68 557 150</span>
-            <span class="footer-content__opacity">+382 69 841 905</span>
-            <span class="footer-content__opacity">+382 67 562 004</span>
-          </div>
-          <div class="footer-info-container__content footer-quicklinks">
-            <h3>Quick Links</h3>
-            <a href="#">Lady of the Rock</a>
-            <a href="/attraction/perast/">Perast</a>
-            <a href="#">Submarine Tunnel</a>
-            <a href="#">Mamula Island</a>
-            <a href="#">Blue Cave</a>
-          </div>
         </div>
-        <div class="footer-copyright-container">
-          <div>
-            <p>Copyright © 2024 Web Center. All Rights Reserved.</p>
-          </div>
-          <div class="footer-copyright-container__privacy">
-            <a href="/privacy-policy">PRIVACY POLICY</a>
-            <a href="#">COOKIES</a>
-          </div>
+        <div class="footer-info-container__content footer-contact">
+          <h3>Contact</h3>
+          <h5>E-MAIL</h5>
+          <a href="mailto:seamagickotor@gmail.com">seamagickotor@gmail.com</a>
+          <h5>RESERVATIONS AND ORDERS</h5>
+          <span class="footer-content__opacity">+382 68 557 150</span>
+          <span class="footer-content__opacity">+382 69 841 905</span>
+          <span class="footer-content__opacity">+382 67 562 004</span>
         </div>
-      </footer>
+        <div class="footer-info-container__content footer-quicklinks">
+          <h3>Quick Links</h3>
+          <a href="#">Lady of the Rock</a>
+          <a href="/attraction/perast/">Perast</a>
+          <a href="#">Submarine Tunnel</a>
+          <a href="#">Mamula Island</a>
+          <a href="#">Blue Cave</a>
+        </div>
+      </div>
+      <div class="footer-copyright-container">
+        <div>
+          <p>Copyright © 2024 Web Center. All Rights Reserved.</p>
+        </div>
+        <div class="footer-copyright-container__privacy">
+          <a href="/privacy-policy">PRIVACY POLICY</a>
+          <a href="#">COOKIES</a>
+        </div>
+      </div>
+    </footer>
     <script src="/script.js"></script>
   </body>
 </html>
